# stasima

./: .gitignore  ARCHITECTURE.md  BRAND.md  CONTENT-MODEL.md  NOTICE  OPERATIONS.md  README.md  SETUP.md  admin.py  admin_test.py  airlock.py  airlock_test.py  append_only_test.py  audit_log.py  audit_test.py  authz.py  authz_test.py  bootstrap_test.py  canon.py  cap_server.py  concordance.toml.example  config.py  config_test.py  embeddings-build-guide.md  embeddings_smoke.py  http_test.py  local_capstore.py  log_test.py  map_index_test.py  multi_instance_test.py  orientation.py  orientation_test.py  pyproject.toml  reindex_test.py  run_tests.py  server_test.py  stasima.toml.example  stdio_test.py  sup_test.py
examples/: spike.sh  sync_demo.py
skills/strophos/: SKILL.md
stasima/: __init__.py  admin.py  airlock.py  audit_log.py  canon.py  cap_server.py  config.py  entries.py  local_capstore.py  map_index.py  orientation.py
